--- a/views/index.jade
+++ b/views/index.jade
@@ -2,20 +2,17 @@ extends layout
 
 block body
 	div(ng-controller='AppCtrl')
-		h2 Hello {{name}}
+		h2 Welcome {{name}}
+			| to your To Do App
 		ul.menu
 			li
-				a(href='view1') view1
+				a(href='login') login &nbsp
 			li
-				a(href='view2') view2
+				a(href='register') &nbsp register
 
 		div(ng-view)
 
 		div
-			| Angular seed app: v
+			| To Do app: v
 			span(app-version)
 
-		table.table
-			tr
-				td Hello
-				td World
