--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,11 @@ html(ng-app="myApp")
 		meta(charset='utf8')
 		base(href='/')
 		title Angular Express Seed App
+		link(rel='stylesheet', href='/css/normalize.css')
 		link(rel='stylesheet', href='/css/app.css')
 		link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/css/style.css')
+		link(rel='stylesheet', href='/css/todo.css')
 	body
 		block body
 
