Removed POST and GET from the FORMS on the LOGIN and REGISTER pages. Will play with AJAX calls next

--- a/views/partials/login.jade
+++ b/views/partials/login.jade
@@ -1,5 +1,5 @@
 h1 {{name}}
-	form#registerForm(method='GET', action='/register')
+	form#registerForm
 		.formfield
 			.formfield--prompt Username:
 			input#username(type='text', name='username', value='', required='')
