--- a/views/partials/register.jade
+++ b/views/partials/register.jade
@@ -1,10 +1,10 @@
-h1 {{name}}
-	form#registerForm(method='POST', action='/register')
+h1 Please register first. Thanks!
+	form#registerForm
 		.formfield
-			.formfield--prompt Username:
+			.formfield--prompt Create a Username:
 			input#username(type='text', name='username', value='', required='')
 		.formfield
-			.formfield--prompt Password:
+			.formfield--prompt Create a Password:
 			input#password(type='password', name='password', required='')
 		input.submitButton(type='submit')
 	br
